--- a/templates/node-ssr-ts/View/winnetou-ssr/src/home/home.wcto.html
+++ b/templates/node-ssr-ts/View/winnetou-ssr/src/home/home.wcto.html
@@ -3,23 +3,13 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>The Small Arkon</title>
-      <link
-        rel="icon"
-        type="image/png"
-        href="/Public/images/arkon-favicon.png" />
-      <link rel="stylesheet" href="/css/arkon.css" />
-      <meta
-        name="description"
-        content="The Small Arkon is a web application built with Winnetou SSR and Arkon UI library." />
-      <meta
-        name="keywords"
-        content="Winnetou, Arkon, SSR, Web Application, UI Library" />
-      <meta name="author" content="Cedros Development" />
+      <title>WinnetouJs SSR Template</title>
+
+      <link rel="stylesheet" href="/css/main.css" />
     </head>
     <body>
       <div id="app"></div>
-      <script src="/js/arkon.js" type="module"></script>
+      <script src="/js/app.js" type="module"></script>
     </body>
   </html>
 </winnetou>
